[package]
name = "ak09940a"
version = "0.1.0"
edition = "2024"
description = "A simple library for the AK09940A magnetic sensor"

[dependencies]
embedded-hal = "1.0"
embedded-hal-async = { version = "1.0", optional = true }
bitbybit = "1.3"
arbitrary-int = ">=1.0"
heapless = "0.8"

[dev-dependencies]
embedded-hal-mock = { version = "0.11.*", features = ["embedded-hal-async"] }
embedded-hal-bus = { version = "0.2.*", features = ["async"] }
async-std = { version = "1.12.*", features = ["attributes"] }

[features]
default = []
async = ["dep:embedded-hal-async"]
blocking = []
