[package]
name = "ak09940a"
version = "0.2.2"
edition = "2021"
authors = ["Fan Jiang"]
description = "A simple library for the AK09940A magnetic sensor"
resolver = "2"
license = "Apache-2.0"
homepage = "https://github.com/ProfFan/ak09940a"

[dependencies]
embedded-hal = "1.0"
embedded-hal-async = { version = "1.0" }
bitbybit = "1.3"
arbitrary-int = ">=1.0"
heapless = "0.8"
duplicate = "2.0"
maybe-async = "0.2"
arrayref = ">=0.3"

[dev-dependencies]
embedded-hal-mock = { version = "0.11.*", features = ["embedded-hal-async"] }
embedded-hal-bus = { version = "0.2.*", features = ["async"] }
async-std = { version = "1.12.*", features = ["attributes"] }

[features]
default = []
